# backend-fastapi

./: .bandit  .env.prod.example  AI_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT.md  Dockerfile.prod  alembic.ini  check_requirements.py  docker-compose.prod.yml  main.py  pyproject.toml  pytest.ini  test_router.py  test_setup.py  用国内镜像安装依赖.bat
app/: integrations.py
app/api路由/v1/: router（路由配置）.py  voice.py
app/api路由/v1/API端点/: __init__.py  ai.py  auth.py  budgets.py  expenses.py  (+9 more)
app/core/: __init__.py  config.py  config（配置管理）.py  database.py  redis.py
app/integrations/: __init__.py  base.py  manager.py  registry.py
app/middleware/: auth.py  logging.py  monitoring.py
app/models/: budget.py  conversation.py  expense.py  group.py  payment_authorization.py  user.py
app/repositories/: base_repository.py  budget_repository.py  expense_repository.py  group_repository.py  user_repository.py
app/services/: ai_service.py  auth_service.py  budget_service.py  cache_service.py  emotion_service.py  feedback_service.py  financial_prediction_service.py  group_service.py  monitoring_service.py  multimodal_service.py  payment_service.py  peer_expression_service.py  personalization_service.py  query_optimizer.py  recommendation_service.py  sync_service.py  voice_recognition_service.py
app/第三方集成/: __init__.py  base.py  manager.py  registry.py
app/第三方集成/providers/: __init__.py  alipay.py  aliyun_sms.py  baidu_ocr.py  baidu_voice.py  deepseek.py  webhook_handler.py  wechat_pay.py
docs/: OFFLINE_VOICE_RECOGNITION.md  VOICE_RECOGNITION.md
k8s/: README.md  app-deployment.yaml  configmap.yaml  deploy.sh  hpa.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  postgres-statefulset.yaml  redis-statefulset.yaml  secrets.yaml
monitoring/: alert_rules.yml  prometheus.yml
nginx/: nginx.conf
scripts/: backup.sh  create_test_user.py  deploy.sh  health_check.sh  init_database.py
tests/: __init__.py  checkpoint_report.md  conftest.py  run_basic_tests.py  run_integration_tests.py  test_ai_service.py  test_basic_integration.py  test_budgets.py  test_example.py  test_expenses.py  test_financial_prediction.py  test_integration_e2e.py  test_performance.py  test_performance_load.py  test_security_data_protection.py  test_simple_integration.py  test_sync_service.py  test_voice_recognition.py
其他被提及的/: Dockerfile  THIRD_PARTY_INTEGRATIONS.md  integration_examples.py  main（应用入口）.py  requirements.txt  环境变量示例.env.example
数据库迁移/: env.py
数据库迁移/versions/: add_updated_at_fields.py
